--- a/tutorial.html
+++ b/tutorial.html
@@ -39,7 +39,7 @@
 		<script type="text/javascript">
 			AtomiAP.open("rlprez.js", "q4gXaL83", {
 				playMode: "Tutorial",
-				preloader: {zIndex: 2,diameter: 200,density: 100,range: 1000,speed: 10,color:'#E75C0C',shape:'spiral'}
+				preloader: {zIndex: 2,diameter: 200,density: 100,range: 1000,speed: 10,color:'#92D050',shape:'spiral'}
 			});
 		</script>
 	</div>
